--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -48,8 +48,8 @@ test_script:
       cargo build --target %TARGET% --release &&
       cargo test --target %TARGET% &&
       cargo test --target %TARGET% --release &&
-      cargo run --target %TARGET% &&
-      cargo run --target %TARGET% --release
+      cargo run --target %TARGET% -- --version &&
+      cargo run --target %TARGET% --release -- --version
     )
 
 before_deploy:
