--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,10 +29,11 @@ serde_derive = "1.0"
 serde_yaml = "0.8"
 env_logger = "0.5"
 humantime = "1.1"
-cbor_event = { path = "cardano-deps/cbor_event" }
-cryptoxide = { path = "cardano-deps/cryptoxide" }
-exe-common = { path = "cardano-deps/exe-common" }
-storage    = { path = "cardano-deps/storage" }
+cbor_event = "1.0"
+cryptoxide = "0.1"
+exe-common      = { path = "cardano-deps/exe-common" }
+cardano-storage = { path = "cardano-deps/storage" }
+storage-units   = { path = "cardano-deps/storage-units" }
 
 [dependencies.clap]
 version = "2.32"
