--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ rand = "0.5"
 serde = "1.0"
 serde_derive = "1.0"
 serde_yaml = "0.8"
+serde_json = "1.0"
 env_logger = "0.5"
 humantime = "1.1"
 cbor_event = "1.0"
