Add genesis data
This includes the genesis data for the mainnet, testnet and staging
chains in the executable, allowing 'cardano-cli blockchain verify' to
work out of the box. In the future, since including this stuff adds
quite a bit of bloat to the binaries, we may want to fetch genesis
data from Hermes (though that doesn't help if we're using cardano-cli
with native peers).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ cryptoxide = "0.1"
 exe-common      = { path = "cardano-deps/exe-common" }
 cardano-storage = { path = "cardano-deps/storage" }
 storage-units   = { path = "cardano-deps/storage-units" }
+base64 = "0.9"
 
 [dependencies.clap]
 version = "2.32"
