--- a/.travis.yml
+++ b/.travis.yml
@@ -50,6 +50,8 @@ matrix:
       #- env: TARGET=s390x-unknown-linux-gnu DISABLE_TESTS=1
     - env: TARGET=x86_64-unknown-linux-gnu
     - env: TARGET=x86_64-unknown-linux-musl
+    - env: TARGET=rustfmt-preview
+      rust: stable
 
     # OSX
     # - env: TARGET=i686-apple-darwin
