--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ serde_yaml = "0.8"
 serde_json = "1.0"
 env_logger = "0.5"
 humantime = "1.1"
-cbor_event = "1.0"
+cbor_event = "^2.1.2"
 cryptoxide = "0.1"
 exe-common      = { path = "cardano-deps/exe-common" }
 cardano-storage = { path = "cardano-deps/storage" }
