add submodule updates
added git commands to ensure cardano-deps submodule works

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,8 @@ jobs:
     working_directory: /mnt/crate
     steps:
     - checkout
+    - run: git submodule init
+    - run: git submodule update
     - attach_workspace:
         at: .
     - restore_cache:
