added submodule updates to all tasks
more submodule updates

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,8 @@ jobs:
     working_directory: /mnt/crate
     steps:
     - checkout
+    - run: git submodule init
+    - run: git submodule update
     - restore_cache:
         keys:
         - cargo-v1-{{ checksum "Cargo.toml" }}-
@@ -58,6 +60,8 @@ jobs:
     working_directory: /mnt/crate
     steps:
     - checkout
+    - run: git submodule init
+    - run: git submodule update
     - attach_workspace:
         at: .
     - restore_cache:
@@ -76,6 +80,8 @@ jobs:
     working_directory: /mnt/crate
     steps:
     - checkout
+    - run: git submodule init
+    - run: git submodule update
     - attach_workspace:
         at: .
     - run: mkdir target/coverage
