--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,42 +6,43 @@ jobs:
     working_directory: /mnt/crate
     steps:
     - checkout
-    - run: git submodule init
-    - run: git submodule update
     - restore_cache:
         keys:
         - cargo-v1-{{ checksum "Cargo.toml" }}-
         - cargo-v1-
     - run: cargo update
     - run: cargo fetch
+    - run: cargo install cargo-junit
     - persist_to_workspace:
         root: .
         paths:
         - Cargo.lock
     - save_cache:
-        key: cargo-v1-{{ checksum "Cargo.toml" }}-{{ checksum "Cargo.lock" }}
+        key: cargo-v2-{{ checksum "Cargo.toml" }}-{{ checksum "Cargo.lock" }}
         paths:
         - /usr/local/cargo/registry
         - /usr/local/cargo/git
+        - /usr/local/cargo/bin
   test:
     docker:
     - image: rust:latest
     working_directory: /mnt/crate
     steps:
     - checkout
-    - run: git submodule init
-    - run: git submodule update
     - attach_workspace:
         at: .
     - restore_cache:
         keys:
-        - cargo-v1-{{ checksum "Cargo.toml" }}-{{ checksum "Cargo.lock" }}
+        - cargo-v2-{{ checksum "Cargo.toml" }}-{{ checksum "Cargo.lock" }}
+    - run:
+        name: create test-results directory
+        command: mkdir -p ~/test-results/${CIRCLE_JOB}
     - run:
         name: Print version information
         command: rustc --version; cargo --version
     - run:
         name: Build and test
-        command: cargo test --verbose --frozen
+        command: cargo junit --name ~/test-results/${CIRCLE_JOB}/results.xml
         environment:
           RUSTFLAGS: -C link-dead-code
     - run:
@@ -50,6 +51,11 @@ jobs:
           for file in target/debug/* target/debug/.??*; do
             [ -d $file -o ! -x $file ] && rm -r $file
           done
+    - store_test_results:
+        path: ~/test-results
+    - store_artifacts:
+        path: ~/test-results
+        destination: test_results
     - persist_to_workspace:
         root: .
         paths:
@@ -60,19 +66,50 @@ jobs:
     working_directory: /mnt/crate
     steps:
     - checkout
-    - run: git submodule init
-    - run: git submodule update
     - attach_workspace:
         at: .
     - restore_cache:
         keys:
-        - cargo-v1-{{ checksum "Cargo.toml" }}-{{ checksum "Cargo.lock" }}
+        - cargo-v2-{{ checksum "Cargo.toml" }}-{{ checksum "Cargo.lock" }}
+    - run:
+        name: create test-results directory
+        command: mkdir -p ~/test-results/${CIRCLE_JOB}
     - run:
         name: Print version information
         command: rustc --version; cargo --version
     - run:
         name: Build and test in release profile
-        command: cargo test --verbose --frozen --release
+        command: cargo junit --name ~/test-results/${CIRCLE_JOB}/results.xml
+    - store_test_results:
+        path: ~/test-results
+    - store_artifacts:
+        path: ~/test-results
+        destination: test_results
+  test_nightly:
+    docker:
+    - image: rustlang/rust:nightly
+    working_directory: /mnt/crate
+    steps:
+    - checkout
+    - attach_workspace:
+        at: .
+    - restore_cache:
+        keys:
+        - cargo-v2-{{ checksum "Cargo.toml" }}-{{ checksum "Cargo.lock" }}
+    - run:
+        name: create test-results directory
+        command: mkdir -p ~/test-results/${CIRCLE_JOB}
+    - run:
+        name: Print version information
+        command: rustc --version; cargo --version
+    - run:
+        name: Build and test with nightly Rust
+        command: cargo junit --name ~/test-results/${CIRCLE_JOB}/results.xml
+    - store_test_results:
+        path: ~/test-results
+    - store_artifacts:
+        path: ~/test-results
+        destination: test_results
   coverage:
     docker:
     - image: ragnaroek/kcov:v33
@@ -80,8 +117,6 @@ jobs:
     working_directory: /mnt/crate
     steps:
     - checkout
-    - run: git submodule init
-    - run: git submodule update
     - attach_workspace:
         at: .
     - run: mkdir target/coverage
@@ -106,7 +141,7 @@ jobs:
     - persist_to_workspace:
         root: .
         paths:
-        - target/coverage-merged
+        - target/coverage
   codecov_upload:
     docker:
     - image: buildpack-deps:curl
@@ -129,6 +164,12 @@ workflows:
     - test_release:
         requires:
         - cargo_fetch
+    - test_nightly:
+        requires:
+        - cargo_fetch
     - coverage:
         requires:
         - test
+    - codecov_upload:
+        requires:
+        - coverage
