--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,10 +48,10 @@ jobs:
         command: rustc --version; cargo --version
     - run:
         name: Build and test
-        command: command: cargo junit --verbose --frozen --name ~/test-results/${CIRCLE_JOB}/results.xml
+        command: cargo junit --verbose --frozen --name ~/test-results/${CIRCLE_JOB}/results.xml
         environment:
           RUSTFLAGS: -C link-dead-code
-    - run:
+    - run:  
         name: Prune the output files
         command: |
           for file in target/debug/* target/debug/.??*; do
