--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
     - checkout
     - run: 
-        name: "Pull Submodules"
+        name: "Submodules"
         command: |
           git submodule init
           git submodule update --remote
@@ -27,6 +27,7 @@ jobs:
         paths:
         - /usr/local/cargo/registry
         - /usr/local/cargo/git
+        - /usr/local/cargo/bin
   test:
     docker:
     - image: rust:latest
@@ -43,6 +44,9 @@ jobs:
     - restore_cache:
         keys:
         - cargo-v1-{{ checksum "Cargo.toml" }}-{{ checksum "Cargo.lock" }}
+    - run:
+        name: create test-results directory
+        command: mkdir -p ~/test-results/${CIRCLE_JOB}
     - run:
         name: Print version information
         command: rustc --version; cargo --version
@@ -82,6 +86,9 @@ jobs:
     - restore_cache:
         keys:
         - cargo-v1-{{ checksum "Cargo.toml" }}-{{ checksum "Cargo.lock" }}
+    - run:
+        name: create test-results directory
+        command: mkdir -p ~/test-results/${CIRCLE_JOB}
     - run:
         name: Print version information
         command: rustc --version; cargo --version
