--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,11 @@ jobs:
     working_directory: /mnt/crate
     steps:
     - checkout
-    - run: git submodule init
-    - run: git submodule update
+    - run: 
+        name: "Submodules"
+        command: |
+          git submodule init
+          git submodule update --remote
     - restore_cache:
         keys:
         - cargo-v1-{{ checksum "Cargo.toml" }}-
@@ -29,8 +32,11 @@ jobs:
     working_directory: /mnt/crate
     steps:
     - checkout
-    - run: git submodule init
-    - run: git submodule update
+    - run: 
+        name: "Submodules"
+        command: |
+          git submodule init
+          git submodule update --remote
     - attach_workspace:
         at: .
     - restore_cache:
@@ -41,27 +47,20 @@ jobs:
         command: rustc --version; cargo --version
     - run:
         name: Build and test
-        command: cargo test --verbose --frozen
+        command: cargo test --verbose --frozen 
         environment:
           RUSTFLAGS: -C link-dead-code
-    - run:
-        name: Prune the output files
-        command: |
-          for file in target/debug/* target/debug/.??*; do
-            [ -d $file -o ! -x $file ] && rm -r $file
-          done
-    - persist_to_workspace:
-        root: .
-        paths:
-        - target/debug/*
   test_release:
     docker:
     - image: rust:latest
     working_directory: /mnt/crate
     steps:
     - checkout
-    - run: git submodule init
-    - run: git submodule update
+    - run: 
+        name: "Submodules"
+        command: |
+          git submodule init
+          git submodule update --remote
     - attach_workspace:
         at: .
     - restore_cache:
@@ -73,51 +72,6 @@ jobs:
     - run:
         name: Build and test in release profile
         command: cargo test --verbose --frozen --release
-  coverage:
-    docker:
-    - image: ragnaroek/kcov:v33
-      entrypoint: /bin/bash
-    working_directory: /mnt/crate
-    steps:
-    - checkout
-    - run: git submodule init
-    - run: git submodule update
-    - attach_workspace:
-        at: .
-    - run: mkdir target/coverage
-    - run:
-        name: Rerun the tests collecting coverage
-        command: |
-          for file in ./target/debug/*; do
-            if test -x $file; then
-              kcov --verify --exclude-pattern=tests \
-                --exclude-path=src/testmocks.rs \
-                target/coverage/$(basename $file) \
-                $file --quiet
-            fi
-          done
-          kcov --merge target/coverage-merged target/coverage/*
-    - store_artifacts:
-        path: target/coverage
-        destination: coverage
-    - store_artifacts:
-        path: target/coverage-merged
-        destination: coverage-merged
-    - persist_to_workspace:
-        root: .
-        paths:
-        - target/coverage-merged
-  codecov_upload:
-    docker:
-    - image: buildpack-deps:curl
-    working_directory: /mnt/crate
-    steps:
-    - checkout
-    - attach_workspace:
-        at: .
-    - run:
-        name: Upload to Codecov
-        command: bash <(curl -s https://codecov.io/bash)
 workflows:
   version: 2
   test_all_and_coverage:
@@ -129,6 +83,4 @@ workflows:
     - test_release:
         requires:
         - cargo_fetch
-    - coverage:
-        requires:
-        - test
+
