--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,7 @@ jobs:
     - run: 
         name: "Submodules"
         command: |
-          git submodule init
-          git submodule update --remote
+          git submodule update --init
     - restore_cache:
         keys:
         - cargo-v1-{{ checksum "Cargo.toml" }}-
@@ -35,8 +34,7 @@ jobs:
     - run: 
         name: "Submodules"
         command: |
-          git submodule init
-          git submodule update --remote
+          git submodule update --init
     - attach_workspace:
         at: .
     - restore_cache:
@@ -59,8 +57,7 @@ jobs:
     - run: 
         name: "Submodules"
         command: |
-          git submodule init
-          git submodule update --remote
+          git submodule update --init
     - attach_workspace:
         at: .
     - restore_cache:
